@@ -1,5 +1,3 @@
-odbc datasources
-odbc drivers
 odbc config_dsn and friends?
 
 db primarykeys?
@@ -9,3 +7,4 @@ Direct param conversions - BINARY
 Direct result conversions - BINARY
 Conversion tests - BINARY
 
+tdbc::odbc manpage
